# ece478-einstein_turtlebot

./: .gitignore  .gitmodules  README.md  Script of Schroedinger Cat..doc  dialogflow.py  recognition.py  record.py
admin/: purchases.csv
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/dynamixel_msgs/: JointState.h  MotorState.h  MotorStateList.h
catkin_ws/devel/include/speech_synthesis/: synthesis_service.h  synthesis_serviceRequest.h  synthesis_serviceResponse.h
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  dynamixel_controllers.pc  dynamixel_driver.pc  dynamixel_msgs.pc  dynamixel_tutorials.pc  face_detection.pc  the_walker.pc  (+4 more)
catkin_ws/src/beginner_tutorials/: package.xml
catkin_ws/src/face_detection/: face_detection.launch
catkin_ws/src/gesture_controls/: gesture_controls.launch
catkin_ws/src/my_dynamixel_tutorial/: all_motor.yaml
catkin_ws/src/robot_theater/: CMakeLists.txt  package.xml  robot_theater.launch
catkin_ws/src/robot_theater/src/: robot_theater.py
catkin_ws/src/speech_synthesis/: CMakeLists.txt
catkin_ws/src/the_walker/: CMakeLists.txt  controller_manager.launch  package.xml
catkin_ws/src/voice_recognition/: CMakeLists.txt  package.xml  voice_recognition.launch
deliverables/: Robotics Project 2 Presentation.pptx  Robotics Project 2 Report.docx  TurtleBot Presentation.pptx  TurtleBot Report.docx
docs/: ECE578_Proj2_ServoLookup.xlsx  dynamixel_source_cmds.txt  purchases.csv
src/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
src/gestures/: gestures.py
src/vision/: README.md  detect.py
(+48 files in other folders)
