<?xml version="1.0"?>
<package format="2">
  <name>robot_theater</name>
  <version>0.0.1</version>
  <description>The robot_theater package.  This package receives stage instructions</description>
  <maintainer email="parola@pdx.edu">Philip Arola</maintainer>
  <license>GPLv2</license>
  <author email="parola@pdx.edu">Philip Arola</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
